fix(): fix pip deps

--- a/env.yml
+++ b/env.yml
@@ -8,7 +8,10 @@ dependencies:
   - nextflow >=21
   - python >=3.7, <3.11
   - pip
-  - aria2
-pip:
-  - requests
-  - executor
+  - aria2 
+  - pip:
+    - requests
+    - executor
+    - pandas
+    - numpy
+    - scipy
